# synthetic_data_release

./: README.md  inference_cli.py  linkage_cli.py  pyproject.toml  requirements.txt  summarise_cli.py  summarise_results.py  utility_cli.py
.github/workflows/: ci.yml  pullrequestchecks.yml
attack_models/: mia_classifier.py  reconstruction.py
configs/linkage/: ctgan_test_runconfig.json  test_runconfig.json
generative_models/: ctgan.py
notebooks/: Analyse Results.ipynb
predictive_models/: predictive_model.py
tests/: README.md  test_attacks.py  test_gms.py  test_sanitisation.py
tests/inference/: runconfig.json  runconfig_cchic.json  test_runconfig.json
tests/linkage/: runconfig.json  runconfig_cchic.json
tests/utility/: runconfig.json  runconfig_cchic.json  test_runconfig.json
utils/: analyse_results.py  evaluation_framework.py
